--- a/pages/nf4514/n12518740.md
+++ b/pages/nf4514/n12518740.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新】 川普：我赢了 拜登自信能赢" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-600x400.jpg"/>
+<div><img alt="【大选更新】 威州说拜登领先 川普要重计票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-600x400.jpg"/>
 <div class="caption">
  2020年美国总统大选的两党候选人，左边为现任共和党总统川普、右边为前民主党副总统拜登。(Chris Graythen/Getty Images; Andrew Caballero-Reynolds/AFP via Getty Images)
 </div></div><hr/>
