--- a/pages/nsc412/n12523578.md
+++ b/pages/nsc412/n12523578.md
@@ -52,7 +52,28 @@
  </strong>
 </p>
 <p>
- 10:31
+ 12：30
+</p>
+<p>
+ 截至美东时间周三12:30，美联社统计显示，美国众议院已经决出380席，其中民主党195席，共和党185席，还有55席待决。其中民主党翻盘2席，共和党翻盘7席，净胜5席。众议院共有435个席位，拿到218席的政党，将成为众院的多数党，目前民主党掌控众议院。
+</p>
+<p>
+ 11：42
+</p>
+<p>
+ 美联社报导，数月前在共和党初选中脱颖而出的女商人劳伦·博伯特（Lauren Boebert）赢得了科罗拉多州第三选区众议员的席位，民主党候选人黛安·米奇·布什（Diane Mitsch Bush）败北。
+</p>
+<p>
+ 目前该区绝大多数选票已经被计数了，她以51%领先，布什为46%。
+</p>
+<p>
+ 布波特大力支持美国宪法第二修正案的拥枪权，她在科州经营的餐厅便取名为“枪手烧烤店”(Shooters Grill)，餐厅员工在上班时可以配戴枪支。
+</p>
+<p>
+ 科罗拉多州的第三选区非常庞大，覆盖了该州的三分之一左右的面积，包括西部的许多乡村和县。
+</p>
+<p>
+ 10：31
 </p>
 <p>
  民主党全力以赴翻转参议院的愿景似乎难以兑现，共和党步步逼上，两党处于难解难分的拉锯战。
