--- a/pages/soh6/439378.md
+++ b/pages/soh6/439378.md
@@ -35,6 +35,56 @@
  <p>
   下面是川普在几个关键的战场州选情的后续更新：
  </p>
+ <h2>
+  【密歇根州】
+ </h2>
+ <h3>
+  川普向密歇根州法院提诉：中止计票
+ </h3>
+ <p>
+  川普2020年竞选团队11月4日向该州法院提起诉讼，要求该州暂停计票，知道获得有意义的介入权限位置。
+ </p>
+ <p>
+  川普竞选经理斯蒂芬（Bill Stepien）发声明说：“随着密歇根州的选票继续计算，密歇根州的总统竞选仍然非常紧张，正如我们一直知道的那样。 密歇根州法律保证，
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  的竞选活动尚未获得有意义的访问众多点票地点的机会，以观察投票的开始和点票过程......我们要求审查那些在无有意义介入权限的情况下进行的开票和点票工作。
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  致力于确保所有密歇根州和其它任何地方都合法计票。”
+ </p>
+ <h2>
+  【宾夕法尼亚州】
+ </h2>
+ <h3>
+  朱利安尼前往宾州督票
+ </h3>
+ <p>
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  的法律顾问、前纽约市长朱利安尼（Rudy Giuliani）表示，他正与一个法律团队一起前往宾州费城，监督那里的正在进行的计票工作。
+ </p>
+ <p>
+  朱利安尼发推文说：“（民主党）在大肆作弊。开票75%，川普已领先55万张选票......不会让费城的民主党人盗窃（大选）成果！”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h2>
+  【
+  <ok href="/term/19352">
+   威斯康星州
+  </ok>
+  】
+ </h2>
  <h3>
   川普团队要求
   <ok href="/term/19352">
@@ -69,6 +119,13 @@
   </ok>
   ，该州拥有11张选举人票，是本次大选的关键战场州。
  </p>
+ <h2>
+  【
+  <ok href="/term/23267">
+   乔治亚州
+  </ok>
+  】
+ </h2>
  <h3>
   <ok href="/term/23267">
    乔治亚州
