--- a/pages/p8/951392.md
+++ b/pages/p8/951392.md
@@ -1,4 +1,4 @@
-### 李承鹏：尊严(图)
+### 人厚道 天不欺(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="尊严" src="https://img2.secretchina.com/pic/2018/5-13/p2166241a838087057-ss.jpg" style="height:333px; width:500px"/>
+ <p style="text-align:center">
+  <img alt="厚道 世说新语 道德 菜根谭" src="https://img3.secretchina.com/pic/2020/11-4/p2810752a903683667-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   女孩在汶川地震纪念碑前悼念（图片来源：Getty Images）
+   人
+   <strong>
+    厚道
+   </strong>
+   ，天不欺。（图片来源：Adobe stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,64 +25,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《通往天安门的旅程》- 36名西方人天安门和平请愿](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月24日讯】《
-  <span href="https://zh.wikipedia.org/wiki/%E5%B7%A6%E4%BC%A0" target="_blank">
-   左传
-  </span>
-  》里讲了这么一个故事：齐国有个大大的花花公子叫齐庄公。齐国有个大大的美女叫棠姜。有一天，齐庄公看到美得不可方物的棠姜，辗转反侧、夜不能寐。终和她暗通款曲。可这件事被棠姜的老公崔杼察觉。那天他趁齐庄公与棠姜幽会时，安排武士们将其乱刀砍死。
+  《
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/世说新语" target="_blank">
+    世说新语
+   </span>
+  </strong>
+  》有云：
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  崔杼是个猛人，也是齐国重臣。他对前来记载的史官说：你就写齐庄公得疟疾死了。史官并不听从，在竹简上写“夏五月乙亥，崔杼弑其君光。”崔杼很生气，拔剑杀掉史官。史官死了，按照当时惯例由其弟继承职位。崔杼对新史官说：“你写齐庄公得疟疾死了。”新史官也不听从，在竹简上写“崔杼弑其君光。”崔杼又拔剑杀了新史官。然后更小的弟弟写下同样的话，同样被杀。最后是最小的弟弟。崔杼直视着他，问：“难道你不爱惜自己的生命？”年轻的史官继续写下“夏五月乙亥，崔杼弑其君光。”崔杼愤怒地把竹简扔到地上，过了很久，叹了口气，放掉史官。
+  “德成智出，业广惟勤，小富靠勤，中富靠智，大富靠德。”
  </p>
  <p>
-  有人问我为什么要
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/写作" target="_blank">
-    写作
-   </span>
-  </strong>
-  。我告诉了他这个故事。而我恰恰要强调的是这故事让我一开始很拒绝写作。
- </p>
- <p>
-  它表明，写作纯属向死。像我这么庸俗的人当然不会干一件吃力还找死的事，加之
-  <span href="https://www.secretchina.com/news/gb/tag/家族" target="_blank">
-   家族
+  算计不如让利，精明不如
+  <span href="https://www.secretchina.com/news/gb/tag/厚道" target="_blank">
+   厚道
   </span>
-  里从文者悲凉的命运，文学出身的我就曾花了很长一段时间去玩一种毫无风险的游戏，并暗自庆幸。
+  ，人算不如天算。
  </p>
  <p>
-  可渐渐地，我发现另一种风险。规则明明规定一场比赛由两支球队进行，实际上却不是这样的。一名球星告诉我：“那天我上场一看，快哭了，因为有队友把球往自己家门踢，场上就是三支队了。可是踢着踢着我又笑了，因为对方也有人把球往自家门踢，就是四支了。直到散场时我终于确定，其实总共有五支队，因为，还有裁判……”
+  老天爷自能明察善恶，厚道之人，天不欺。人生在世，唯有人品，方能让人拼到最后。
  </p>
  <p>
-  我在这样一种情形下渐渐意识到一个叫“
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/尊严" target="_blank">
-    尊严
+   【01】便宜占尽，是最大的愚蠢。
+  </strong>
+ </p>
+ <p>
+  冀剑制说过一段很经典的话：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “缺乏德性的人总想占别人的便宜，让别人牺牲，对别人赋予很高的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/道德" target="_blank">
+    道德
    </span>
   </strong>
-  ”的东西是存在的。哪怕游戏也要有尊严，我不能无视两支变成了五支，更不能接受自己的工作就是长期把五支证明成两支，并证明得文采飞扬的样子。这个不断修改大脑数据库的过程让我痛苦不堪，越发失去智力的尊严。我从文学躲到游戏，在一间没有尊严的大屋子里，任何角落都猬琐。又去看开始的故事，才注意到它还有个结尾：那个史官保住性命，捡起竹简走了出来，遇上一位南史氏，就是南方记载历史的人。史官惊讶地问：“你怎么来啦。”南史氏说：“我听说你兄弟几个都被杀死，担心被篡史，所以拿着竹简赶来记录了。”我觉得这个结尾更震撼，前面的史官因坚持自己的工作而死，南史氏则是主动找死。这叫前赴后继。有种命运永远属于你，躲无可躲，不如捧着竹简迎上去。
+  要求。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +100,7 @@
   </div>
  </center>
  <p>
-  直到2008年，压在残垣断壁下的体温尚存还动着的小手，花花绿绿的衣袖……我终于明白，我确实该回去了。这，就是我的来历。
+  生活中，总有人把便宜占尽，专挑软柿子捏。把别人的让步与忍耐当作自己肆意妄为的资本，把他人的利益收入囊中。却不知，占小便宜的人，往往要吃大亏。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,7 +115,7 @@
   </div>
  </center>
  <p>
-  当然，我仍是一个庸俗不堪的人，骨子里畏惧着节烈的东西，我做不出南史氏手捧竹简沿着青石板路直迎上去那犹如彩虹挂天穹的壮丽景象，只是低头琢磨寻常巷陌一些故事、小小的常识。这些故事和常识，全世界人民都知道。
+  《五卷书》里有一篇非常经典的寓言故事：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +130,7 @@
   </div>
  </center>
  <p>
-  只不过我们曾经丢失，或假装丢失了……我一直偿试给这些事和常识找出统一的特征，后来才明白，这其实是尊严。
+  从前，有一对山羊发生了很大矛盾，双方一开始怒目相对，后来用犄角顶撞对方。不一会儿，地上满是鲜血。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +145,7 @@
   </div>
  </center>
  <p>
-  在我看来，尊严首先是智力上的尊严。很长一段时间失去智力上的尊严。赵高说：这是一匹马。人们点头说：是啊，好快的一匹马。赶紧去修改脑子里的数据库，哦，马是长角的。
+  这时，一只豺狼路过见状，喜上眉梢，心想：吃羊肉前，地上的血那么美味，可不能浪费了啊。于是，他走到两只羊中间，舔舐地上的血，不料俩山羊一撞，豺狼当场毙命。豺狼只看到眼前的利益，自然会忽略身后的危机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,7 +160,7 @@
   </div>
  </center>
  <p>
-  又有人说要大炼钢铁砸烂锅碗瓢盆起高炉。钢铁量超过整个欧洲农作物产全世界的四十倍全世界三分之二的人等着营救
+  诱饵之下，也许藏着巨大陷阱。很多时候，我们就算面对鹬蚌相争时，也不一定能像渔翁一般，轻松得利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -168,7 +175,13 @@
   </div>
  </center>
  <p>
-  比起思维的结果，思维本身就是一种尊严。只是总有人放弃了这过程，放弃去想，为什么世界上最快的动车可以被一记闪电穿，校舍倒塌之后竟找不到钢筋。
+  《
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/菜根谭" target="_blank">
+    菜根谭
+   </span>
+  </strong>
+  》有云：“不求非分之福，不贪无故之获。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -183,7 +196,7 @@
   </div>
  </center>
  <p>
-  所以说尊严也是一种记忆。我曾看过一部韩国爱情片，名字好像叫《脑中的橡皮擦》，那个女孩子患了失忆症，时时想不起自己是谁，干过什么。喜欢那女孩儿的男孩子就随时照顾他，跟她骑自行车，给她做浪漫的事情……这爱情片美好得一塌糊涂，因为既然失忆，个人的缺点和糟糕的回忆也随时抹去，一切尽是天使。
+  把便宜占尽并非智慧，而是最大的愚蠢。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +211,9 @@
   </div>
  </center>
  <p>
-  一个人患了失忆症并非坏事，可这要是发生在一个群体（民族）上就不太妙。一个人的故事是文艺片，一群人的故事是纪录片，把纪录片拍成文艺片，正是灾难的根源。多少年来我们的脑中一直有块橡皮擦，比如开头那个叫崔杼的人就很想做一块橡皮擦……
+  <strong>
+   【02】精明，不如厚道。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +228,11 @@
   </div>
  </center>
  <p>
-  一座高架桥桥下死很多无辜，可是我并没看见纪念碑，什么都不曾发生过。
+  《
+  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwj1r_OQsOrsAhUKGaYKHVAFDTUQmhMwGXoECAQQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E4%25B8%2589%25E5%259C%258B%25E5%25BF%2597&amp;usg=AOvVaw3FZ86vZwGLwtGjHwM6-wo6">
+   三国志
+  </span>
+  》有云：“勿以恶小而为之，勿以善小而不为。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,7 +247,7 @@
   </div>
  </center>
  <p>
-  一座高架桥侧滑了，死几个人。临时工。一块万能的“橡皮擦”。
+  生而为人，应有是非之心，为人要有品，做事要有底线。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +262,7 @@
   </div>
  </center>
  <p>
-  有段时间我狂妄地认为自己的写作是为了追求公平，后来才懂得，渺小角色的我写不出社会的公平，我顶多叙述点个人的情感尊严，且这种体验大多时候也只不过是喜剧片段。
+  但总有人，为了满足一己私欲，做出伤天害理之事，把精明都用在算计上，给自己埋下祸根。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +277,7 @@
   </div>
  </center>
  <p>
-  我小时候住过的成都打金街267号，一处清秀的宅子。镂空的花厅摆着龙须菊和吊兰，透过木质窗檩可看到大慈寺的香火，滴水檐打出的一排排整齐的浅洞，表明这个家族来历已久。听老人说，这家族的人们和睦相处，每天到堂屋去拜天地君亲师，偶有生活争纷，可从未红过脸。这家族有国共2党。
+  曾有卖陈醋的，为了降低成本，昧着良心添加工业醋精。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,7 +292,7 @@
   </div>
  </center>
  <p>
-  曾经，这个宅子一夜之间就爆发了最大的战争，起因是，一些人喜欢在院子里种花，是资产阶级，另一些人主张在院子收集废铜烂铁。这场战争持续很久，每次战斗的起因也很奇怪。直到我已醒事，还记得西厢房的三伯脖子上挂着很大的牌子，满脸是雪。只因他在院子一隅种了一些爱吃的香葱。
+  曾有卖黑木耳的，为了让木耳看起来品质更高，便用墨汁浸染。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -288,7 +307,7 @@
   </div>
  </center>
  <p>
-  有天，一个亲戚高呼“打道永青，保护江青”时，由于尾部实在太押韵，喊成了“打道江青，保卫永青”……家族的人们安静下来，仔细听，唯剩他一个人兀自在喊，觉得不对时，晚了，人们缓缓走过去……此时他已是头号敌人，不一会儿，满头是包，活像菠萝。
+  曾有知名火腿厂家，为了产量，添加化学药品。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -303,7 +322,7 @@
   </div>
  </center>
  <p>
-  整个院子无幸免，轮流成为头号。甚至领袖悼那天，有个孩子看着大人痛哭的模样很是有趣，笑了，也差点被当成头号。站在高板凳上承认了很久错误，才被放过。
+  丧尽天良的，大有人在，这样的人，越聪明，于社会而言，就越危险。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -318,7 +337,7 @@
   </div>
  </center>
  <p>
-  这个来自江西的家族，抗日战争没有拆散它，竟在后来莫名其妙反目成仇。等我长大才知道，那时连元帅的女儿也公开声明与父亲划清界限，一个郭姓文豪听说儿子被迫害时，竟不出手搭救，眼睁睁看其……大义灭亲。
+  但奸诈阴险之人，自有天收。与其在歧途上绞尽脑汁，不如在正道上出一份力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -333,7 +352,11 @@
   </div>
  </center>
  <p>
-  却把其他当至亲。我常听到两种好玩的说法：一、某某是爹妈，即使做错什么也是为了我们好；二、别总怪某某，对成绩不好的孩子，要是取得一点儿进步也该表扬。
+  晚清重臣
+  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiZ2riqsOrsAhXsxIsBHepFCl0QmhMwEHoECAUQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%25B7%25A6%25E5%25AE%2597%25E6%25A3%25A0&amp;usg=AOvVaw1SwCxd1P79VdrtAGkaEuXk">
+   左宗棠
+  </span>
+  ，就是一个厚道之人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -348,7 +371,7 @@
   </div>
  </center>
  <p>
-  我是一个爱国者，和大部分人一样，只有生活意见没有政治追求，可是我这样的表达方式常让人不舒服。
+  当年，他有钱有势，但没有滥用职权牟利，也没有贪污受贿。不仅如此，他还把大部分俸禄贡献出来，补贴军饷，解他人燃眉之急。左宗棠的厚道，给自己和子孙都带来了厚福。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -363,52 +386,7 @@
   </div>
  </center>
  <p>
-  所以我要讲个故事：1971年2月22日，美国最高法院的议事厅展开一场辩论，因为有个叫科恩的调皮青年因为反对征兵，他不仅反对而且穿着一件印有“Fuck the Draft”字样的夹克衫，在洛杉矶法院的走廊里晃荡，从而被定罪。那天法庭上有一些修女，大法官本不准律师过度阐述夹克上的话，可律师认为这并不是问题，他说出这些话并详细分析青年为何这么做的原因，最终帮科恩赢得了官司。哈伦法官书写的法庭意见是：“一个人的粗话，却有可能是另一个人的抒情诗。在这个拥有众多人口和高度分化的社会，这不失为一剂良药。时常充斥着刺耳杂音的社会氛围，并不意味着软弱，它恰恰是力量的体现。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一个人的粗话，却有可能是另一个人的抒情诗。这是表达的尊严。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  养猪场的人曾经对我说一个事实，他们养的一群猪从来不会保护猪圈。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  我的写作不是为了真理，真理离我太远，我只不过为了尊严。智力的尊严，记忆的尊严，亲情的尊严，表达的尊严，生育的尊严……陕西邓吉元，那个孩子快八个月大时被强行流产的父亲，为了讨说法，被迫跣足散发逃亡在大山里……北京著名的老张。二十多年前因为自留地补偿的几十块钱差价，走上了上房之路。当年蔡国庆深情地唱：北京在桥，啊，千姿又百态……有没有想到这个老张的身影。
+  厚道并非死板愚蠢，而是坚守底线，仰不愧天，一生坦荡。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -427,7 +405,9 @@
   </ins>
  </center>
  <p>
-  以及死去的尊严。
+  <strong>
+   【03】厚道，是一种远见。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -442,41 +422,10 @@
   </div>
  </center>
  <p>
-  那一年严凤英自杀之后，有人为了寻找“特务发报机”，在其身体用小刀深度挖（细节网上搜吧，这样的词汇是不能发表的）。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  傅雷夫妇似乎保持了尊严。他俩一天连遭到四拨红卫兵抄家，凌晨时分写下纸条交待后事：600元留给女佣作为工资，55.29元付房租，剩下的53.30元作为火葬费……自缢前忽想到踢翻凳子会吵醒楼下的邻居，于是铺上一层厚厚的棉被。他们死都要尽量优雅，他们怕惊动邻居，更怕惊动那个世界。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  其实我最想说的是美轮美奂的东西。我真正认为，才华来自于尊严。那些年，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiTiqG1sOrsAhXfy4sBHTKmDq4QmhMwGHoECAwQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E8%2580%2581%25E5%25AD%2590&amp;usg=AOvVaw2Zfgb0MMGzoOWxn72JYqGG">
+   老子
   </span>
-  人画的太阳直逼银河系恒星数量，并没有出过一个莫奈。那么多叫向阳花的公社，种了好多的向日葵天天盯着，也没有诞生过一个梵高。你看梅兰芳先生的《贵妃醉酒》，大小云手，眼波流动，那四平调清美婉转：海岛冰轮初转腾，见玉兔，玉兔又早东升，那冰轮离海岛，乾坤分外明，皓月当空……好一似嫦娥下九重，清清冷落在广寒宫。
+  ：“物或损之而益，或益之而损。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -491,7 +440,7 @@
   </div>
  </center>
  <p>
-  这个国家太需要这美轮美奂的东西了，而能创造出这些艺术作品的人，骨子里恰有尊严。
+  物极必反，正如手中之沙，握得越紧，流逝得越快。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -506,7 +455,7 @@
   </div>
  </center>
  <p>
-  有段时间我们的艺术只需要歌命样板戏。《龙江颂》里的江水英，她铿锵地唱：“毫不利己破私念，专门利人公在先，似战鼓催征人快马加鞭……”包括其他那些铁姑娘，眼神刚毅、造型如山，有段时间我觉得，她们一生都只需要革命，不要生活、不要恋爱。
+  很多时候，我们拼劲全力向他人索取更大的利益时，往往会适得其反，失去更多。当我们选择让步与成全他人时，或许会得到的，远大于期望值。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -521,7 +470,10 @@
   </div>
  </center>
  <p>
-  曾写过“云想衣裳花想容，春风拂槛露华浓”的李白，情何以堪。
+  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjryra9sOrsAhW8IqYKHZ8vDcwQmhMwF3oECAUQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%259D%258E%25E5%2598%2589%25E8%25AA%25A0&amp;usg=AOvVaw2ETDloDUu80U0hlqUyyF3H">
+   李嘉诚
+  </span>
+  正因为与人合作时，习惯让利两分，才成了香港首富。李嘉诚在生意场上看似亏了两分，实则却赚了人心。和李嘉诚合作的人，都能赚到两分便宜，因此，他的口碑为他扩开了财路。一传十，十传百，他便赚得盆满钵满。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -536,7 +488,7 @@
   </div>
  </center>
  <p>
-  这让创造过“春花秋月何时了，往事知多少”名句的南唐后主李煜，如何回首故国月明中。
+  最成功的合作，莫过于双赢，很多时候，让人一步，也是成全自己。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -551,7 +503,7 @@
   </div>
  </center>
  <p>
-  这些事，不是什么大事，这些道理，却不该“烟消云散”。
+  精明的人，总为小利输掉大局，断自己的后路；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -566,7 +518,7 @@
   </div>
  </center>
  <p>
-  尊严如此奇怪，它并不值钱，可是我们仅有。
+  厚道的人，总以远见洞察人心，成全自己一生。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -581,7 +533,9 @@
   </div>
  </center>
  <p>
-  尊严本身不是作品，却能让你通体放光，两眼澄明，自己是自己最好的作品。这些道理——
+  <strong>
+   【04】小胜靠智，大胜靠德。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -596,7 +550,7 @@
   </div>
  </center>
  <p>
-  致读者：如果遇到字句不通或错，或漏，那是“全世界人民都知道”的原因：删减了若干字。
+  古人云：“小胜靠智，大胜靠德。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -610,7 +564,36 @@
    </center>
   </div>
  </center>
- (文章仅代表作者个人立场和观点)
+ <p>
+  厚道之人，往往能在人生路上赢到最后，不管位居何位，也会备受尊敬。逆境时有人帮，落井时有人拉，深交的都是同样厚道的益友。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  厚道之人，深受上天格外眷顾，总能轻松收获成功、幸福的人生。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -629,7 +612,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -661,13 +644,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/943948.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/943948.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/943948.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/24/943948.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951392.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951392.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/951392.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/05/951392.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/943948.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/951392.md' width='0px' height='0px'/>
