--- a/pages/nf4514/n12532246.md
+++ b/pages/nf4514/n12532246.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.7】拜登深夜讲话 未宣布胜选" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229498868-600x400.jpg"/>
+<div><img alt="【大选更新11.7】密歇根出错计票软件 30州用" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229498868-600x400.jpg"/>
 <div class="caption">
  民主党候选人乔·拜登在深夜进行演说，拜登没有宣布胜选，但强调他“将会获胜”。  (ANGELA WEISS/AFP via Getty Images)
 </div></div><hr/>
